# kde-frameworks-tutorial

./: CMakeLists.txt
BluezQt/: CMakeLists.txt  service_init.cpp
KDNSSD/: CMakeLists.txt  service_discover.cpp  service_publish.cpp
KJobWidgets/: CMakeLists.txt  kjob_progress_helloworld.cpp
KNotifications/: CMakeLists.txt  simple_notification.cpp
